[package]
name = "eco-rs"
version = "0.1.4"
edition = "2021"
authors = ["Kauê Fraga Rodrigues"]
description = "🔊 Uma implementação em Rust do comando echo"
license = "MIT"
readme = "crates-readme.md"
keywords = ["echo", "cli"]
repository = "https://github.com/kauefraga/eco"

[dependencies]
console = { version = "0.15.8", features = ["windows-console-colors"] }
